Fix placeholder and color of tooltip in dark mode

--- a/src/components/WeightChart/CustomTooltip/styles.module.css
+++ b/src/components/WeightChart/CustomTooltip/styles.module.css
@@ -3,4 +3,5 @@
   padding: 10px;
   border-radius: 8px;
   border: 1px solid var(--n40);
+  color: var(--n70);
 }
